--- a/_posts/2019-07-12-the-us-narrative-today.html
+++ b/_posts/2019-07-12-the-us-narrative-today.html
@@ -601,107 +601,107 @@ stories:
   domain: http://www.daily-review.com/
   link: https://www.daily-review.com/news-local/residents-head-sand-piles-protect-homes
 images:
-- name: school-clouds-church-clouds-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-purple-pond.jpg
-- name: supreme-court-supremecourt-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-pablo-blue.jpg
-- name: window-window-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-wols.jpg
-- name: oldhousecars-house-old-cars-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-nazi-poster.jpg
-- name: beach-rocks-beach-rocks-currents-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-umberto-bocc.jpg
-- name: hollywood-building-hollywood-building-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-jap-wav-pr.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-internet-numbers.jpg
-- name: aws-s3-square-old-gas-pumps-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-old-gas-pumps-square.jpg
-- name: beach-clouds-lifeguard-beachclouds-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-smooth-ride.jpg
-- name: meadowbutterfly-meadow-butterfly-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-pablo-blue.jpg
-- name: old-gas-pumps-oldgaspumps-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-kand-two.jpg
-- name: bluelake-green-zuma-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-green-zuma-file-00-01-17-38.jpg
-- name: oldhousecars-house-old-cars-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crafty-painting.jpg
-- name: abandonedbuildings_crunch_paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_crunch_paper.jpg
-- name: nyc-flag-nycflag-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-gan-vogh.jpg
-- name: blossombar-blue-granite-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-granite-file-00-00-50-62.jpg
-- name: oldcabin-oldcabin-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-bright-sand.jpg
-- name: IMG_4038.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/IMG_4038.jpg
-- name: school-clouds-church-clouds-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-yellow-paper.jpg
-- name: old-school-house-old-schoolhouse-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-propaganda-leaflets.jpg
-- name: old-school-house-old-schoolhouse-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-emily-carr.jpg
-- name: eduardo-eduardo-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-gan-vogh.jpg
-- name: gypsymosaic-gypsy-eyes-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-mucha-mult.jpg
-- name: abandonedbuildings_oily_mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_oily_mcoilface.jpg
-- name: rain-princess-DSC_0015.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0015.jpg
-- name: miamibeach-miamibeach-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-ww2-color.jpg
-- name: old-granary-field-granaryfield-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-pablo-blue.jpg
-- name: birdhouse-birdhouse-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-crunch-paper.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-diego-rivera1.jpg
-- name: supreme-court-supremecourt-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-creativity.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-colorful-blocks.jpg
-- name: supreme-court-supremecourt-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-ww2-dresden.jpg
-- name: oldhotel-oldhotel-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-crunch-paper.jpg
-- name: carry-load-carryload-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-circuit.jpg
-- name: crow_mucha_mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_mucha_mult.jpg
-- name: server-racks-clouds-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-blue-circuit.jpg
-- name: containership-bw-storytelling-colorful-blocks.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling-colorful-blocks.png
-- name: flower-barbed-wire-flower-barbed-wire-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit-4.jpg
-- name: aws-s3-square-file-00-00-00-00-frozen-tree-sun-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-file-00-00-00-00-frozen-tree-sun-square.jpg
-- name: border-crossing-bordercrossing-kandinsky-bv.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-kandinsky-bv.png
-- name: docks-docks-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-constitution.jpg
-- name: white-house-lawn-white-house-lawn-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-matrix.jpg
-- name: aws-s3-square-64-176-800-500-0-max-0--1--1-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-64-176-800-500-0-max-0--1--1-square.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-gan-vogh.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-gan-vogh.JPG
-- name: castle-wall-DSC-0067-alberto-giacometti.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-alberto-giacometti.JPG
-- name: fence-mexico-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-purple-storm.jpg
-- name: sand-hand-sand-hand-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-far-away.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-monet-one.jpg
-- name: amusement-park-amusement-park-2-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-rainbow-festival.jpg
-- name: ellis-island-ellis-island-room-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-brush.jpg
-- name: downtown-trucksilo-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-kandinsky-bv.jpg
+- name: aws-s3-stories-downtheline-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-downtheline-dali-three.jpg
+- name: trucksilo-trucksilo-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dark-dali.jpg
+- name: old-granary-field-oldhouse-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-alberto-giacometti.jpg
+- name: border-crossing-bordercrossing-gred-mash.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-gred-mash.png
+- name: fence-fence-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dark-dali.jpg
+- name: capital-battle-capitolbattle-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-post-modern.jpg
+- name: subway-subway-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-crabapple.jpg
+- name: locked-up-steam-lock-up-steam-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-nazi-poster.jpg
+- name: abe-lincoln-one-yellow-collage-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-collage-file-00-00-00-00.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-wols.jpg
+- name: razorcliff-razorcliff-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-nazi-poster.jpg
+- name: castle-wall-DSC-0067-marcel-duchamp.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-marcel-duchamp.JPG
+- name: wind-mills-windmills-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-emily-carr.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-marcel-duchamp.jpg
+- name: server-cloud-server-racks-clouds-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-space-pizza.jpg
+- name: mistywoods-babyfoot-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-clean-view.jpg
+- name: old-barn-old-barn-1500-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-green-zuma.jpg
+- name: old-door-lock-old-door-lock-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-pablo-blue.jpg
+- name: dc-statue-dcstatue-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-yellow-paper.jpg
+- name: birdhouse-birdhouse-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-crabapple.jpg
+- name: old-barn-old-barn-1500-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-far-away.jpg
+- name: border-fence-border-fence-on-hill-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-smoking-cigarette.jpg
+- name: hollywood-building-hollywood-building-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-yellow-paper.jpg
+- name: aws-s3-blossombar-blossombar-still-1200.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-blossombar-blossombar-still-1200.png
+- name: old-school-house-old-schoolhouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-colored-circuits.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-crafty-painting.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-crafty-painting.JPG
+- name: docks-docks-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-yellow-collage.jpg
+- name: death-valley-death-valley-national-park-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-spagetti-accident.jpg
+- name: copper-circuit-IMG_7559.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7559.jpg
+- name: stories-4882162452-fa3126b38d-b-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-4882162452-fa3126b38d-b-aqua.jpg
+- name: berlinwall2-berlinwall-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dark-rain.jpg
+- name: old-school-house-old-schoolhouse-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-crabapple.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-wols.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-wols.JPG
+- name: yosemite-yosemite-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dark-dali.jpg
+- name: miamibeach-miamibeach-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-colored-circuits.jpg
+- name: old-door-lock-old-door-lock-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-atari-asteroids.jpg
+- name: stories-raven-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-raven-fence.jpg
+- name: bordercrossing-bordercrossing-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dali-three.jpg
+- name: containership-containership-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-far-away.jpg
+- name: berlinwall2-berlinwall-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-pablo-blue.jpg
+- name: containership-containership-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-hot-spicy.jpg
+- name: mosaic-face-mosaic-face-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-smoking-cigarette.jpg
+- name: fence-fence-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-marcel-duchamp.jpg
+- name: stories-beach-rocks-currents-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-beach-rocks-currents-blue-circuit-5.jpg
+- name: downtown-trucksilo-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-smooth-ride.jpg
+- name: nyc-flag-nycflag-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-kand-two.jpg
+- name: locked-up-steam-lock-up-steam-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-neo-instinct.jpg
+- name: rockingchair-rockingchair-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-plentiful.jpg
+- name: machine-road-machine-road-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dali-two.jpg
+- name: catacombs-catacombs-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dali-two.jpg
+- name: razorwire-DSC-0080-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-far-away.jpg
 ---
 UFs Dark History Of Animal Testing.&nbsp;Lees Returns To Cowboy Baseball Staff.&nbsp;House Panel Voting On Subpoenas Tied To Mueller Report.&nbsp;Abba Music Being Featured In Summer Production.&nbsp;Judge Gives Justice For Toddler Harlan Haines.&nbsp;Wayne County High School Graduation.&nbsp;This Colorado Song Is A Welcome Break From Odes To Cannabis.&nbsp;Ed Hardy's First Retrospective Paints Him As Fine Artist.&nbsp;
